--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  cloud_firestore: ^4.15.8  # <--- ADD THIS
+  cloud_firestore: ^4.17.0 # <--- ADD THIS
   intl: ^0.18.1
   firebase_core: ^2.32.0    # Use the latest version
   firebase_auth: ^4.20.0
+  firebase_storage: ^11.7.0
   lottie: ^3.1.0
+  image_picker: ^0.8.7+3        
+  cloudinary_public: ^0.23.1    
+  http: ^1.0.0   
 
 dev_dependencies:
   flutter_test:
