--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  cloud_firestore: ^4.17.0 # <--- ADD THIS
+  cloud_firestore: ^4.17.5 # <--- ADD THIS
   intl: ^0.18.1
   firebase_core: ^2.32.0    # Use the latest version
   firebase_auth: ^4.20.0
@@ -43,7 +43,9 @@ dependencies:
   image_picker: ^0.8.7+3        
   cloudinary_public: ^0.23.1    
   http: ^1.0.0   
-
+  csv: ^6.0.0
+  path_provider: ^2.1.2
+  share_plus: ^10.0.0 # Or share_plus if you prefer sharing
 dev_dependencies:
   flutter_test:
     sdk: flutter
