--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.8.1
-
+  sdk: '>=3.0.0 <4.0.0'
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
 # consider running `flutter pub upgrade --major-versions`. Alternatively,
@@ -44,8 +43,14 @@ dependencies:
   cloudinary_public: ^0.23.1    
   http: ^1.0.0   
   csv: ^6.0.0
-  path_provider: ^2.1.2
   share_plus: ^10.0.0 # Or share_plus if you prefer sharing
+  excel: ^4.0.0
+  file_picker: ^6.0.0
+  pdf: ^3.10.0
+  path_provider: ^2.1.1
+  open_file: ^3.3.0 # To open the folder/files
+  permission_handler: ^11.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -72,6 +77,7 @@ flutter:
   assets:
     - assets/Login animation.json
     - assets/mca_logo.jpg
+    - assets/cert_template.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
